// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Icon Default smoke-test 1`] = `
<div class="inline-flex flex-wrap gap-2">
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <g clip-path="url(#a)">
      <path d="M57.709 20.105H68.62a2.1 2.1 0 0 0 2.099-2.095V9.632a2.1 2.1 0 0 0-2.099-2.095h-3.439c-1.111 0-2.014-.9-2.014-2.01V2.095A2.1 2.1 0 0 0 61.07 0H30.02a2.1 2.1 0 0 0-2.098 2.095v3.432c0 1.11-.903 2.01-2.014 2.01H22.47c-1.157 0-2.098.94-2.098 2.095v3.432c0 1.11-.903 2.01-2.014 2.01h-3.439a2.1 2.1 0 0 0-2.099 2.094s-.503-1.272-.503 22.493c0 21.247.503 19.38.503 19.38a2.1 2.1 0 0 0 2.1 2.096h3.438c1.111 0 2.014.9 2.014 2.01v3.517c0 1.109.902 2.01 2.013 2.01h3.524c1.111 0 2.014.9 2.014 2.01v3.432a2.1 2.1 0 0 0 2.098 2.094h30.211a2.1 2.1 0 0 0 2.099-2.094v-3.433c0-1.11.902-2.01 2.013-2.01h5.557c1.158 0 2.099-.94 2.099-2.094v-9.984a2.1 2.1 0 0 0-2.099-2.095h-13.03c-1.157 0-2.098.94-2.098 2.095v5.044c0 1.11-.902 2.01-2.014 2.01H37.488c-1.111 0-2.013-.9-2.013-2.01v-5.11a2.1 2.1 0 0 0-2.099-2.094h-5.119c-1.111 0-1.739.163-2.014-2.01-.085-.698-.13-1.553-.196-2.695-.163-2.878-.307-1.723-.307-10.369 0-12.085.314-15.563.503-17.24.19-1.677.903-2.01 2.014-2.01h5.12a2.1 2.1 0 0 0 2.098-2.094v-3.433c0-1.109.902-2.01 2.013-2.01h16.116c1.111 0 2.014.901 2.014 2.01v3.433c0 1.155.94 2.094 2.098 2.094zM18.626 73.757h-2.478a.87.87 0 0 1-.87-.868v-2.473c0-.96-.777-1.743-1.745-1.743H6.838c-.96 0-1.745.777-1.745 1.743v2.473a.87.87 0 0 1-.87.868H1.746c-.961 0-1.746.776-1.746 1.742v6.682c0 .96.778 1.742 1.746 1.742h2.477c.484 0 .87.392.87.868v2.473c0 .96.778 1.743 1.745 1.743h6.695c.961 0 1.746-.777 1.746-1.743v-2.473c0-.483.392-.868.87-.868h2.477c.961 0 1.746-.776 1.746-1.742v-6.682c0-.96-.778-1.742-1.746-1.742">
      </path>
    </g>
    <defs>
      <clipPath id="a">
        <path d="M0 0h72v89H0z">
        </path>
      </clipPath>
    </defs>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M36.888 11H41.3v4.413h-4.412zm-4.413 8.825v-4.412h4.413v4.412zm-4.413 4.413v-4.413h4.413v4.413zM23.65 28.65h4.413v-4.412H23.65zm-4.412 4.413h4.412V28.65h-4.412zm-4.413 0v4.412h4.413v-4.413zm-4.412-4.413h4.412v4.413h-4.412zm0 0H6v-4.412h4.413z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M12.573 7.573v32.01H8V3h32.01v41.155H17.146v-32.01h13.718V35.01h-4.573V16.718h-4.573v22.864h13.719V7.572z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M21.8 8.444h4.4v4.445h4.4v4.444H35V12.89h-4.4V8.444h-4.4V4h-4.4zm-4.4 4.445V8.444h4.4v4.445zm0 0v4.444H13V12.89zm8.8 26.667h-4.4V35.11h-4.4v-4.444H13v4.444h4.4v4.445h4.4V44h4.4zm4.4-4.445h-4.4v4.445h4.4zm0 0H35v-4.444h-4.4z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M22.004 8h4.001v14.004H40.01v4.001H26.005V40.01h-4V26.005H8v-4h14.004z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M28 4H16v8H4v4h4v28h32V16h4v-4H32V4zm0 4h-8v4h8zM12 40V16h.001z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M41 12.667v-1.89H20.222V7H5.112v32.111H7V41h34v-1.889h1.889V12.667z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M15 40.25V7h4.75v4.75h4.75v4.75h4.75v4.75H34V26h-4.75v4.75H24.5v4.75h-4.75v4.75z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M32 40.25V7h-4.75v4.75H22.5v4.75h-4.75v4.75H13V26h4.75v4.75h4.75v4.75h4.75v4.75z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M40.25 34H7v-4.75h4.75V24.5h4.75v-4.75h4.75V15H26v4.75h4.75v4.75h4.75v4.75h4.75z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M40.25 15H7v4.75h4.75v4.75h4.75v4.75h4.75V34H26v-4.75h4.75V24.5h4.75v-4.75h4.75z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M5 6h5.286v5.286H5zm10.571 10.571h-5.285v-5.285h5.285zm5.286 5.286h-5.286v-5.286h5.286zm5.286 0h-5.286v5.286h-5.286v5.286h-5.285v5.285H5V43h5.286v-5.286h5.285V32.43h5.286v-5.286h5.286v5.286h5.286v5.285h5.285V43H42v-5.286h-5.286V32.43H31.43v-5.286h-5.286zm5.286-5.286v5.286h-5.286v-5.286zm5.285-5.285v5.285H31.43v-5.285zm0 0V6H42v5.286z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M24 6.4h3.2v12.8H40v6.4h-3.2v3.2h-3.2V32h-3.2v3.2h-3.2v3.2H24v3.2h-3.2V28.8H8v-6.4h3.2v-3.2h3.2V16h3.2v-3.2h3.2V9.6H24z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M2 15h3.583v3.6H2zm7.167 7.2H5.583v-3.6h3.584zm7.166 3.6v-3.6H9.167v3.6H5.583v3.6h3.584v-3.6zm14.334 0H16.333v3.6H12.75V33h3.583v-3.6h14.334V33h3.583v-3.6h-3.583zm7.166-3.6h-7.166v3.6h7.166v3.6h3.584v-3.6h-3.584zm3.584-3.6v3.6h-3.584v-3.6zm0 0V15H45v3.6z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M16.667 11h14.666v22h-22V14.667h7.334zm14.666 3.667h7.334v3.666h3.666v7.334h-3.666 3.666v3.666h-3.666V33h-7.334zm-14.666 22h14.666V33H16.667zm-11-18.334h3.666v7.334H2V22h3.667zM42.333 22H46v3.667h-3.667zM5.667 25.667h3.666v3.666H5.667zM28 19.833h-8v8h8z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M9.714 9.714h8.572V6.857h2.857V4h5.714v2.857h2.857v2.857h8.572v8.572h2.857v2.857H44v5.714h-2.857v2.857h-2.857v8.572h-8.572v2.857h-2.857V44h-5.714v-2.857h-2.857v-2.857H9.714v-8.572H6.857v-2.857H4v-5.714h2.857v-2.857h2.857zm8.572 5.715v2.857h-2.857v11.428h2.857v2.857h11.428v-2.857h2.857V18.286h-2.857v-2.857z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M4 4h39v39H4zm3.9 3.9v7.8h7.8V7.9zm11.7 0v7.8h7.8V7.9zm11.7 0v7.8h7.8V7.9zm7.8 11.7h-7.8v7.8h7.8zm0 11.7h-7.8v7.8h7.8zm-11.7 7.8v-7.8h-7.8v7.8zm-11.7 0v-7.8H7.9v7.8zM7.9 27.4h7.8v-7.8H7.9zm11.7-7.8v7.8h7.8v-7.8z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M4 5h39v38H4zm3.9 4.571v6.572h31.2V9.57zm31.2 11.143H7.9v6.572h31.2zm0 11.143H7.9v6.572h31.2z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M35.8 4h-4.1v4.1h-4.1v4.1h-4.1v4.1h-4.1v4.1h-4.1v4.1h-4.1v4.1H7.1v4.1H3V45h12.3v-4.1h4.1v-4.1h4.1v-4.1h4.1v-4.1h4.1v-4.1h4.1v-4.1h4.1v-4.1H44v-4.1h-4.1V8.1h-4.1zm0 16.4h-4.1v4.1h-4.1v4.1h-4.1v4.1h-4.1v4.1h-4.1v-4.1h-4.1v-4.1h4.1v-4.1h4.1v-4.1h4.1v-4.1h4.1v-4.1h4.1v4.1h4.1zM11.2 32.7H7.1v8.2h8.2v-4.1h-4.1z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M26.165 2h-4.393v13.181h4.393zm0 30.756h-4.393v13.181h4.393zm19.772-10.984v4.393H32.756v-4.393zm-30.756 4.393v-4.393H2v4.393zm15.378-13.18h4.394v4.393h-4.394zm8.787-4.394h-4.393v4.393h4.393zm-21.968 4.393h-4.394v4.394h4.394zM8.591 8.591h4.393v4.393H8.591zm21.968 26.362h4.394v4.393h4.393v-4.393h-4.393v-4.394h-4.394zm-17.575 0v-4.394h4.394v4.394zv4.393H8.591v-4.393z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M4 21.571v4.858h29.25v4.857h4.875v-4.857H43V21.57h-4.875v-4.857H33.25v4.857zm24.375-9.714h4.875v4.857h-4.875zm0 0H23.5V7h4.875zm0 24.286h4.875v-4.857h-4.875zm0 0H23.5V41h4.875z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M43.9 21.338v4.987H13.975v4.988H8.988v-4.988H4v-4.988h4.988V16.35h4.987v4.987zm-24.937-9.975h-4.988v4.987h4.987zm0 0h4.987V6.375h-4.988zm0 24.937h-4.988v-4.987h4.987zm0 0h4.987v4.988h-4.988z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M20.857 45h5.286V14.25h5.286V9.125h-5.286V4h-5.286v5.125h-5.286v5.125h5.286zM10.286 19.375V14.25h5.285v5.125zm0 0V24.5H5v-5.125zm26.428 0V14.25H31.43v5.125zm0 0V24.5H42v-5.125z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M21 4h5v30.75h5v5.125h-5V45h-5v-5.125h-5V34.75h5zM11 29.625v5.125h5v-5.125zm0 0V24.5H6v5.125zm25 0v5.125h-5v-5.125zm0 0V24.5h5v5.125z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M8.35 4h.094L8.36 39.652h31.312V8.442H8.444V4h31.228v4.348H44v31.304h-4.328v4.328L8.35 44v-4.348H4V8.348h4.35zm13.428 13.326h4.444v-4.442h-4.444zm4.444 17.768h-4.444V21.768h4.444z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M32.4 3h-4.2v4.2h4.2v4.2H7.2v4.2H3v10.5h4.2V15.6h25.2v4.2h-4.2V24h4.2v-4.2h4.2v-4.2h4.2v-4.2h-4.2V7.2h-4.2zm-21 37.8h4.2V45h4.2v-4.2h-4.2v-4.2h25.2v-4.2H45V21.9h-4.2v10.5H15.6v-4.2h4.2V24h-4.2v4.2h-4.2v4.2H7.2v4.2h4.2z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M33.106 6h-4.518v4.518h4.518v4.517H10.518v4.518H6v18.07h4.518v4.519H24.07v-4.518H10.518v-18.07h22.588v4.517h-4.518v4.517h4.518v-4.517h4.518v-4.518h4.517v-4.518h-4.517v-4.517h-4.518z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M14.2 4h16.4v4.1H14.2zm-4.1 8.2V8.1h4.1v4.1zm0 16.4H6V12.2h4.1zm4.1 4.1h-4.1v-4.1h4.1zm16.4 0v4.1H14.2v-4.1zm4.1-4.1h-4.1v4.1h4.1v4.1h4.1v4.1h4.1V45H47v-4.1h-4.1v-4.1h-4.1v-4.1h-4.1zm0-16.4h4.1v16.4h-4.1zm0 0V8.1h-4.1v4.1z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M10.8 5H7v38h34.2V5h-3.8v3.8h-3.8V5h-3.8v3.8H26V5h-3.8v3.8h-3.8V5h-3.8v3.8h-3.8zm3.8 3.8h3.8v3.8h-3.8zm7.6 0H26v3.8h-3.8zm7.6 0h3.8v3.8h-3.8zm3.8 7.6h-19v3.8h19zm0 7.6h-19v3.8h19zM26 35.4v-3.8h7.6v3.8z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          d="M0 6h6v6H0zM6 6h6v6H6zM12 6h6v6h-6zM6 12h6v6H6zM18 18h6v6h-6zM18 12h6v6h-6zM12 24h6v6h-6zM12 18h6v6h-6zM12 12h6v6h-6zM0 0h6v6H0zM6 0h6v6H6zM24 18h6v6h-6zM0 12h6v6H0zM6 18h6v6H6zM0 18h6v6H0zM0 24h6v6H0zM0 30h6v6H0zM0 36h6v6H0zM6 24h6v6H6zM18 24h6v6h-6zM24 24h6v6h-6z"
    >
    </path>
    <path fill="#000"
          d="M29 24h6v6h-6zM6 30h6v6H6z"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M19 6h9v9h-9zm0 14h9v9h-9zm0 14h9v9h-9z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M8.7 9h11.1v5.625H42v3.75H19.8V24H8.7v-5.625H5v-3.75h3.7zm3.7 3.75v7.5h3.7v-7.5zM27.2 24h11.1v5.625H42v3.75h-3.7V39H27.2v-5.625H5v-3.75h22.2zm3.7 3.75v7.5h3.7v-7.5z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M14.069 23.667v4.37h4.034v4.37h2.017v2.186h2.017v2.185h4.034v-2.185h2.017v-2.186h2.017v-4.37h4.034v-4.37h4.035V17.11h-4.035v2.185h-4.034v4.37h-4.034V4h-4.034v19.667h-4.034v-4.37h-4.035V17.11h-4.034v6.556z">
    </path>
    <path d="M38.274 34.593v4.37h-28.24v-4.37H6v8.74h36.308v-8.74z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M25.6 4h-4.1v8.2h4.1zm-8.2 12.3h12.3v4.1h4.1v8.2h-4.1v8.2H17.4v-8.2h-4.1v-8.2h4.1zm0 24.6h12.3V45H17.4zm28.7-18.45v4.1h-8.2v-4.1zm-36.9 4.1v-4.1H1v4.1zM33.8 12.2h4.1v4.1h-4.1zm4.1 0H42V8.1h-4.1zm-28.7 0h4.1v4.1H9.2zm0 0V8.1H5.1v4.1z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          fill-rule="evenodd"
          d="M18.8 0h9.6v9.6h-9.6zm-7.2 12h24v4.8h-4.8V48H26V33.6h-4.8V48h-4.8V16.8h-4.8zM6.8 7.2V12h4.8V7.2zm0 0H2V2.4h4.8zm33.6 0V12h-4.8V7.2zm0 0V2.4h4.8v4.8z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M42 6H5v37h37zm-20.555 8.222h4.111v12.334h-4.111zm0 16.445h4.111v4.11h-4.111z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          d="M38 42H10v-4H6V10h4V6h28v4h4v28h-4zM18 32h12v-4H18zm-4-4h4v-4h-4zm16 0h4v-4h-4zm-14-8h4v-4h-4zm12 0h4v-4h-4z"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          d="M42 42H14v-4h24V14h4zM34 6v28H6V6zM18 18h-4v4h4v4h4v-4h4v-4h-4v-4h-4z"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          d="M27 38H6V17h4v-4h3.5V9h24v4H41v11H27v3h7v4h-3.5v3.5H27zM16.5 20.5H20V17h-3.5z"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          d="M20.2 12.8H23v2.8h2.8v-1.4h2.8V10h5.6v2.8H37v2.8h2.8V24H37v2.8h-2.8v2.8h-2.8v2.8h-2.8v2.8h-2.8V38H23v-2.8h-2.8v-2.8h-2.8v-2.8h-2.8v-2.8h-2.8V24H9v-8.4h2.8v-2.8h2.8V10h5.6z"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          d="M39.2 39.2H43V43h-3.8v-3.798h-3.8v-3.8h3.8zM27.8 8.8h3.8v22.802h-3.8V35.4H12.6V12.602h7.6V8.8h-7.6V5h15.2zm7.6 26.6h-3.8v-3.8h3.8zM12.6 12.6H8.8v7.6h3.8v11.402H8.8V27.8H5V12.6h3.8V8.8h3.8zm22.8 15.2h-3.8V12.6h3.8z"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          d="M4.462 4.154h4.154v4.154H4.462zM29.385 4.154h4.154v4.154h-4.154zM8.615 0h4.154v4.154H8.615zM33.538 0h4.154v4.154h-4.154zM.308 0h4.154v4.154H.308zM25.231 0h4.154v4.154h-4.154zM.308 8.308h4.154v4.154H.308zM25.231 8.308h4.154v4.154h-4.154zM8.615 8.308h4.154v4.154H8.615zM33.538 8.308h4.154v4.154h-4.154zM4 23h30v4H4z"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          d="M27 0v22.5h-4.5V0zM31.5 4.5V18H27V4.5zM36 9v4.5h-4.5V9zM9 0v22.5h4.5V0zM4.5 4.5V18H9V4.5zM0 9v4.5h4.5V9z"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          d="M39.4 31.2h-3.6v3.6h-3.6v3.6h-3.6V42H25v-3.6h-3.6v-3.6h-3.6v-3.6h-3.6v-3.6h25.2zm-10.8-18h3.6v3.6h3.6v3.6h3.6V24H43v3.6H10.6V24H7V9.6h21.6zm-14.4 0v3.6h3.6v-3.6zM25 9.6H7V6h18z"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="1em"
       height="1em"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          d="M38.666 5v34.667h.001V5H43v39H4V5zm-26 30.334h4.333V31h-4.333zm17.333 0h4.334V31h-4.334zm-8.666-8.667h4.333v-4.333h-4.333zM12.666 18h4.333v-4.333h-4.333zm17.333 0h4.334v-4.333h-4.334z"
    >
    </path>
  </svg>
</div>
`;

exports[`Components/Icon Large smoke-test 1`] = `
<div class="inline-flex flex-wrap gap-2">
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <g clip-path="url(#a)">
      <path d="M57.709 20.105H68.62a2.1 2.1 0 0 0 2.099-2.095V9.632a2.1 2.1 0 0 0-2.099-2.095h-3.439c-1.111 0-2.014-.9-2.014-2.01V2.095A2.1 2.1 0 0 0 61.07 0H30.02a2.1 2.1 0 0 0-2.098 2.095v3.432c0 1.11-.903 2.01-2.014 2.01H22.47c-1.157 0-2.098.94-2.098 2.095v3.432c0 1.11-.903 2.01-2.014 2.01h-3.439a2.1 2.1 0 0 0-2.099 2.094s-.503-1.272-.503 22.493c0 21.247.503 19.38.503 19.38a2.1 2.1 0 0 0 2.1 2.096h3.438c1.111 0 2.014.9 2.014 2.01v3.517c0 1.109.902 2.01 2.013 2.01h3.524c1.111 0 2.014.9 2.014 2.01v3.432a2.1 2.1 0 0 0 2.098 2.094h30.211a2.1 2.1 0 0 0 2.099-2.094v-3.433c0-1.11.902-2.01 2.013-2.01h5.557c1.158 0 2.099-.94 2.099-2.094v-9.984a2.1 2.1 0 0 0-2.099-2.095h-13.03c-1.157 0-2.098.94-2.098 2.095v5.044c0 1.11-.902 2.01-2.014 2.01H37.488c-1.111 0-2.013-.9-2.013-2.01v-5.11a2.1 2.1 0 0 0-2.099-2.094h-5.119c-1.111 0-1.739.163-2.014-2.01-.085-.698-.13-1.553-.196-2.695-.163-2.878-.307-1.723-.307-10.369 0-12.085.314-15.563.503-17.24.19-1.677.903-2.01 2.014-2.01h5.12a2.1 2.1 0 0 0 2.098-2.094v-3.433c0-1.109.902-2.01 2.013-2.01h16.116c1.111 0 2.014.901 2.014 2.01v3.433c0 1.155.94 2.094 2.098 2.094zM18.626 73.757h-2.478a.87.87 0 0 1-.87-.868v-2.473c0-.96-.777-1.743-1.745-1.743H6.838c-.96 0-1.745.777-1.745 1.743v2.473a.87.87 0 0 1-.87.868H1.746c-.961 0-1.746.776-1.746 1.742v6.682c0 .96.778 1.742 1.746 1.742h2.477c.484 0 .87.392.87.868v2.473c0 .96.778 1.743 1.745 1.743h6.695c.961 0 1.746-.777 1.746-1.743v-2.473c0-.483.392-.868.87-.868h2.477c.961 0 1.746-.776 1.746-1.742v-6.682c0-.96-.778-1.742-1.746-1.742">
      </path>
    </g>
    <defs>
      <clipPath id="a">
        <path d="M0 0h72v89H0z">
        </path>
      </clipPath>
    </defs>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M36.888 11H41.3v4.413h-4.412zm-4.413 8.825v-4.412h4.413v4.412zm-4.413 4.413v-4.413h4.413v4.413zM23.65 28.65h4.413v-4.412H23.65zm-4.412 4.413h4.412V28.65h-4.412zm-4.413 0v4.412h4.413v-4.413zm-4.412-4.413h4.412v4.413h-4.412zm0 0H6v-4.412h4.413z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M12.573 7.573v32.01H8V3h32.01v41.155H17.146v-32.01h13.718V35.01h-4.573V16.718h-4.573v22.864h13.719V7.572z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M21.8 8.444h4.4v4.445h4.4v4.444H35V12.89h-4.4V8.444h-4.4V4h-4.4zm-4.4 4.445V8.444h4.4v4.445zm0 0v4.444H13V12.89zm8.8 26.667h-4.4V35.11h-4.4v-4.444H13v4.444h4.4v4.445h4.4V44h4.4zm4.4-4.445h-4.4v4.445h4.4zm0 0H35v-4.444h-4.4z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M22.004 8h4.001v14.004H40.01v4.001H26.005V40.01h-4V26.005H8v-4h14.004z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M28 4H16v8H4v4h4v28h32V16h4v-4H32V4zm0 4h-8v4h8zM12 40V16h.001z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M41 12.667v-1.89H20.222V7H5.112v32.111H7V41h34v-1.889h1.889V12.667z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M15 40.25V7h4.75v4.75h4.75v4.75h4.75v4.75H34V26h-4.75v4.75H24.5v4.75h-4.75v4.75z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M32 40.25V7h-4.75v4.75H22.5v4.75h-4.75v4.75H13V26h4.75v4.75h4.75v4.75h4.75v4.75z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M40.25 34H7v-4.75h4.75V24.5h4.75v-4.75h4.75V15H26v4.75h4.75v4.75h4.75v4.75h4.75z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M40.25 15H7v4.75h4.75v4.75h4.75v4.75h4.75V34H26v-4.75h4.75V24.5h4.75v-4.75h4.75z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M5 6h5.286v5.286H5zm10.571 10.571h-5.285v-5.285h5.285zm5.286 5.286h-5.286v-5.286h5.286zm5.286 0h-5.286v5.286h-5.286v5.286h-5.285v5.285H5V43h5.286v-5.286h5.285V32.43h5.286v-5.286h5.286v5.286h5.286v5.285h5.285V43H42v-5.286h-5.286V32.43H31.43v-5.286h-5.286zm5.286-5.286v5.286h-5.286v-5.286zm5.285-5.285v5.285H31.43v-5.285zm0 0V6H42v5.286z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M24 6.4h3.2v12.8H40v6.4h-3.2v3.2h-3.2V32h-3.2v3.2h-3.2v3.2H24v3.2h-3.2V28.8H8v-6.4h3.2v-3.2h3.2V16h3.2v-3.2h3.2V9.6H24z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M2 15h3.583v3.6H2zm7.167 7.2H5.583v-3.6h3.584zm7.166 3.6v-3.6H9.167v3.6H5.583v3.6h3.584v-3.6zm14.334 0H16.333v3.6H12.75V33h3.583v-3.6h14.334V33h3.583v-3.6h-3.583zm7.166-3.6h-7.166v3.6h7.166v3.6h3.584v-3.6h-3.584zm3.584-3.6v3.6h-3.584v-3.6zm0 0V15H45v3.6z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M16.667 11h14.666v22h-22V14.667h7.334zm14.666 3.667h7.334v3.666h3.666v7.334h-3.666 3.666v3.666h-3.666V33h-7.334zm-14.666 22h14.666V33H16.667zm-11-18.334h3.666v7.334H2V22h3.667zM42.333 22H46v3.667h-3.667zM5.667 25.667h3.666v3.666H5.667zM28 19.833h-8v8h8z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M9.714 9.714h8.572V6.857h2.857V4h5.714v2.857h2.857v2.857h8.572v8.572h2.857v2.857H44v5.714h-2.857v2.857h-2.857v8.572h-8.572v2.857h-2.857V44h-5.714v-2.857h-2.857v-2.857H9.714v-8.572H6.857v-2.857H4v-5.714h2.857v-2.857h2.857zm8.572 5.715v2.857h-2.857v11.428h2.857v2.857h11.428v-2.857h2.857V18.286h-2.857v-2.857z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M4 4h39v39H4zm3.9 3.9v7.8h7.8V7.9zm11.7 0v7.8h7.8V7.9zm11.7 0v7.8h7.8V7.9zm7.8 11.7h-7.8v7.8h7.8zm0 11.7h-7.8v7.8h7.8zm-11.7 7.8v-7.8h-7.8v7.8zm-11.7 0v-7.8H7.9v7.8zM7.9 27.4h7.8v-7.8H7.9zm11.7-7.8v7.8h7.8v-7.8z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M4 5h39v38H4zm3.9 4.571v6.572h31.2V9.57zm31.2 11.143H7.9v6.572h31.2zm0 11.143H7.9v6.572h31.2z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M35.8 4h-4.1v4.1h-4.1v4.1h-4.1v4.1h-4.1v4.1h-4.1v4.1h-4.1v4.1H7.1v4.1H3V45h12.3v-4.1h4.1v-4.1h4.1v-4.1h4.1v-4.1h4.1v-4.1h4.1v-4.1h4.1v-4.1H44v-4.1h-4.1V8.1h-4.1zm0 16.4h-4.1v4.1h-4.1v4.1h-4.1v4.1h-4.1v4.1h-4.1v-4.1h-4.1v-4.1h4.1v-4.1h4.1v-4.1h4.1v-4.1h4.1v-4.1h4.1v4.1h4.1zM11.2 32.7H7.1v8.2h8.2v-4.1h-4.1z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M26.165 2h-4.393v13.181h4.393zm0 30.756h-4.393v13.181h4.393zm19.772-10.984v4.393H32.756v-4.393zm-30.756 4.393v-4.393H2v4.393zm15.378-13.18h4.394v4.393h-4.394zm8.787-4.394h-4.393v4.393h4.393zm-21.968 4.393h-4.394v4.394h4.394zM8.591 8.591h4.393v4.393H8.591zm21.968 26.362h4.394v4.393h4.393v-4.393h-4.393v-4.394h-4.394zm-17.575 0v-4.394h4.394v4.394zv4.393H8.591v-4.393z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M4 21.571v4.858h29.25v4.857h4.875v-4.857H43V21.57h-4.875v-4.857H33.25v4.857zm24.375-9.714h4.875v4.857h-4.875zm0 0H23.5V7h4.875zm0 24.286h4.875v-4.857h-4.875zm0 0H23.5V41h4.875z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M43.9 21.338v4.987H13.975v4.988H8.988v-4.988H4v-4.988h4.988V16.35h4.987v4.987zm-24.937-9.975h-4.988v4.987h4.987zm0 0h4.987V6.375h-4.988zm0 24.937h-4.988v-4.987h4.987zm0 0h4.987v4.988h-4.988z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M20.857 45h5.286V14.25h5.286V9.125h-5.286V4h-5.286v5.125h-5.286v5.125h5.286zM10.286 19.375V14.25h5.285v5.125zm0 0V24.5H5v-5.125zm26.428 0V14.25H31.43v5.125zm0 0V24.5H42v-5.125z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M21 4h5v30.75h5v5.125h-5V45h-5v-5.125h-5V34.75h5zM11 29.625v5.125h5v-5.125zm0 0V24.5H6v5.125zm25 0v5.125h-5v-5.125zm0 0V24.5h5v5.125z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M8.35 4h.094L8.36 39.652h31.312V8.442H8.444V4h31.228v4.348H44v31.304h-4.328v4.328L8.35 44v-4.348H4V8.348h4.35zm13.428 13.326h4.444v-4.442h-4.444zm4.444 17.768h-4.444V21.768h4.444z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M32.4 3h-4.2v4.2h4.2v4.2H7.2v4.2H3v10.5h4.2V15.6h25.2v4.2h-4.2V24h4.2v-4.2h4.2v-4.2h4.2v-4.2h-4.2V7.2h-4.2zm-21 37.8h4.2V45h4.2v-4.2h-4.2v-4.2h25.2v-4.2H45V21.9h-4.2v10.5H15.6v-4.2h4.2V24h-4.2v4.2h-4.2v4.2H7.2v4.2h4.2z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M33.106 6h-4.518v4.518h4.518v4.517H10.518v4.518H6v18.07h4.518v4.519H24.07v-4.518H10.518v-18.07h22.588v4.517h-4.518v4.517h4.518v-4.517h4.518v-4.518h4.517v-4.518h-4.517v-4.517h-4.518z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M14.2 4h16.4v4.1H14.2zm-4.1 8.2V8.1h4.1v4.1zm0 16.4H6V12.2h4.1zm4.1 4.1h-4.1v-4.1h4.1zm16.4 0v4.1H14.2v-4.1zm4.1-4.1h-4.1v4.1h4.1v4.1h4.1v4.1h4.1V45H47v-4.1h-4.1v-4.1h-4.1v-4.1h-4.1zm0-16.4h4.1v16.4h-4.1zm0 0V8.1h-4.1v4.1z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M10.8 5H7v38h34.2V5h-3.8v3.8h-3.8V5h-3.8v3.8H26V5h-3.8v3.8h-3.8V5h-3.8v3.8h-3.8zm3.8 3.8h3.8v3.8h-3.8zm7.6 0H26v3.8h-3.8zm7.6 0h3.8v3.8h-3.8zm3.8 7.6h-19v3.8h19zm0 7.6h-19v3.8h19zM26 35.4v-3.8h7.6v3.8z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          d="M0 6h6v6H0zM6 6h6v6H6zM12 6h6v6h-6zM6 12h6v6H6zM18 18h6v6h-6zM18 12h6v6h-6zM12 24h6v6h-6zM12 18h6v6h-6zM12 12h6v6h-6zM0 0h6v6H0zM6 0h6v6H6zM24 18h6v6h-6zM0 12h6v6H0zM6 18h6v6H6zM0 18h6v6H0zM0 24h6v6H0zM0 30h6v6H0zM0 36h6v6H0zM6 24h6v6H6zM18 24h6v6h-6zM24 24h6v6h-6z"
    >
    </path>
    <path fill="#000"
          d="M29 24h6v6h-6zM6 30h6v6H6z"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M19 6h9v9h-9zm0 14h9v9h-9zm0 14h9v9h-9z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M8.7 9h11.1v5.625H42v3.75H19.8V24H8.7v-5.625H5v-3.75h3.7zm3.7 3.75v7.5h3.7v-7.5zM27.2 24h11.1v5.625H42v3.75h-3.7V39H27.2v-5.625H5v-3.75h22.2zm3.7 3.75v7.5h3.7v-7.5z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path d="M14.069 23.667v4.37h4.034v4.37h2.017v2.186h2.017v2.185h4.034v-2.185h2.017v-2.186h2.017v-4.37h4.034v-4.37h4.035V17.11h-4.035v2.185h-4.034v4.37h-4.034V4h-4.034v19.667h-4.034v-4.37h-4.035V17.11h-4.034v6.556z">
    </path>
    <path d="M38.274 34.593v4.37h-28.24v-4.37H6v8.74h36.308v-8.74z">
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M25.6 4h-4.1v8.2h4.1zm-8.2 12.3h12.3v4.1h4.1v8.2h-4.1v8.2H17.4v-8.2h-4.1v-8.2h4.1zm0 24.6h12.3V45H17.4zm28.7-18.45v4.1h-8.2v-4.1zm-36.9 4.1v-4.1H1v4.1zM33.8 12.2h4.1v4.1h-4.1zm4.1 0H42V8.1h-4.1zm-28.7 0h4.1v4.1H9.2zm0 0V8.1H5.1v4.1z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          fill-rule="evenodd"
          d="M18.8 0h9.6v9.6h-9.6zm-7.2 12h24v4.8h-4.8V48H26V33.6h-4.8V48h-4.8V16.8h-4.8zM6.8 7.2V12h4.8V7.2zm0 0H2V2.4h4.8zm33.6 0V12h-4.8V7.2zm0 0V2.4h4.8v4.8z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="currentColor"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill-rule="evenodd"
          d="M42 6H5v37h37zm-20.555 8.222h4.111v12.334h-4.111zm0 16.445h4.111v4.11h-4.111z"
          clip-rule="evenodd"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          d="M38 42H10v-4H6V10h4V6h28v4h4v28h-4zM18 32h12v-4H18zm-4-4h4v-4h-4zm16 0h4v-4h-4zm-14-8h4v-4h-4zm12 0h4v-4h-4z"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          d="M42 42H14v-4h24V14h4zM34 6v28H6V6zM18 18h-4v4h4v4h4v-4h4v-4h-4v-4h-4z"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          d="M27 38H6V17h4v-4h3.5V9h24v4H41v11H27v3h7v4h-3.5v3.5H27zM16.5 20.5H20V17h-3.5z"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          d="M20.2 12.8H23v2.8h2.8v-1.4h2.8V10h5.6v2.8H37v2.8h2.8V24H37v2.8h-2.8v2.8h-2.8v2.8h-2.8v2.8h-2.8V38H23v-2.8h-2.8v-2.8h-2.8v-2.8h-2.8v-2.8h-2.8V24H9v-8.4h2.8v-2.8h2.8V10h5.6z"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          d="M39.2 39.2H43V43h-3.8v-3.798h-3.8v-3.8h3.8zM27.8 8.8h3.8v22.802h-3.8V35.4H12.6V12.602h7.6V8.8h-7.6V5h15.2zm7.6 26.6h-3.8v-3.8h3.8zM12.6 12.6H8.8v7.6h3.8v11.402H8.8V27.8H5V12.6h3.8V8.8h3.8zm22.8 15.2h-3.8V12.6h3.8z"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          d="M4.462 4.154h4.154v4.154H4.462zM29.385 4.154h4.154v4.154h-4.154zM8.615 0h4.154v4.154H8.615zM33.538 0h4.154v4.154h-4.154zM.308 0h4.154v4.154H.308zM25.231 0h4.154v4.154h-4.154zM.308 8.308h4.154v4.154H.308zM25.231 8.308h4.154v4.154h-4.154zM8.615 8.308h4.154v4.154H8.615zM33.538 8.308h4.154v4.154h-4.154zM4 23h30v4H4z"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          d="M27 0v22.5h-4.5V0zM31.5 4.5V18H27V4.5zM36 9v4.5h-4.5V9zM9 0v22.5h4.5V0zM4.5 4.5V18H9V4.5zM0 9v4.5h4.5V9z"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          d="M39.4 31.2h-3.6v3.6h-3.6v3.6h-3.6V42H25v-3.6h-3.6v-3.6h-3.6v-3.6h-3.6v-3.6h25.2zm-10.8-18h3.6v3.6h3.6v3.6h3.6V24H43v3.6H10.6V24H7V9.6h21.6zm-14.4 0v3.6h3.6v-3.6zM25 9.6H7V6h18z"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="2rem"
       height="2rem"
       fill="none"
       class="icon"
       viewbox="0 0 48 48"
  >
    <path fill="#000"
          d="M38.666 5v34.667h.001V5H43v39H4V5zm-26 30.334h4.333V31h-4.333zm17.333 0h4.334V31h-4.334zm-8.666-8.667h4.333v-4.333h-4.333zM12.666 18h4.333v-4.333h-4.333zm17.333 0h4.334v-4.333h-4.334z"
    >
    </path>
  </svg>
</div>
`;
